# DrnEngine

./: .gitignore  CMakeLists.txt  GenerateProjectFiles.bat  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  Premake5.lua  shadertoolsconfig.json
Engine/: CMakeLists.txt  Test.hlsl
Engine/Content/: Level_01.drn  Level_02.drn  M_TestShader.drn  SM_Torus.drn  T_DebugIndexedColor.drn  T_DebugIndexedColor.tga  Test.drn  Test_MultiMaterial.drn  cube.drn
Engine/Content/BasicShapes/: BasicShapes.blend  BasicShapes.blend1  SM_Cone.drn  SM_Cone.fbx  SM_Cube.drn  SM_Cube.fbx  SM_Cylinder.drn  SM_Cylinder.fbx  SM_FlipedSphere.drn  SM_FlipedSphere.fbx  SM_Plane.drn  SM_Plane.fbx  SM_Quad.drn  SM_Quad.fbx  SM_Sphere.drn  SM_Sphere.fbx  SM_Torus.drn  SM_Torus.fbx
Engine/Content/DefaultVehicle/: DefaultVehicle.blend  DefaultVehicle.blend1  SM_DefaultVehicle_Body.drn  SM_DefaultVehicle_Body.fbx  SM_DefaultVehicle_Wheel.drn  SM_DefaultVehicle_Wheel.fbx
Engine/Content/EditorResources/: T_DefaultComponentIcon.drn  T_DefaultComponentIcon.tga  T_DefaultTexturecube.hdr
Engine/Content/EditorResources/AssetIcons/: T_AssetIcon_Default.drn  T_AssetIcon_Default.tga  T_AssetIcon_Level.drn  T_AssetIcon_Level.tga  T_AssetIcon_Material.drn  T_AssetIcon_Material.tga  T_AssetIcon_StaticMesh.drn  T_AssetIcon_StaticMesh.tga  T_AssetIcon_Texture2D.drn  T_AssetIcon_Texture2D.tga  T_AssetIcon_TextureCube.drn  T_AssetIcon_TextureCube.tga  T_AssetIcon_TextureVolume.drn  T_AssetIcon_TextureVolume.tga  T_DefaultAssetIcon.drn  T_DefaultAssetIcon.tga
Engine/Content/EditorResources/ComponentIcons/: T_DecalIcon.drn  T_DecalIcon.tga
Engine/Content/EditorResources/LightIcons/: T_DirectionalLightIcon.drn  T_DirectionalLightIcon.tga  T_PointLightIcon.drn  T_PointLightIcon.tga  T_SkyLightIcon.drn  T_SkyLightIcon.tga  T_SpotLightIcon.drn  T_SpotLightIcon.tga
Engine/Content/Materials/: Common.hlsl  DefaultMeshShader.drn  DefaultMeshShader.hlsl  LineBatchShader.hlsl  M_AxisGridMaterial.drn  M_AxisGridMaterial.hlsl  M_DefaultDecal.drn  M_DefaultDecal.hlsl  M_DefaultMeshShader.drn  M_DefaultTextured.drn  M_DefaultTextured.hlsl  M_DefaultTranslucentUnlit.drn  M_LineBatch.drn  M_SkySphere.drn  M_SkySphere.hlsl  M_TestShader.drn  M_Texture2DPreview.drn  M_Texture2DPreview.hlsl  M_TextureCube3DPreview.drn  M_TextureCube3DPreview.hlsl  M_TextureCubePreview.drn  M_TextureCubePreview.hlsl  M_UvCoordColor.drn  Test.drn  Test.hlsl  TestShader.drn  TestShader.hlsl  UvCoordColor.hlsl
Engine/Content/PhysicalMaterial/: PM_Default.drn  PM_Ice.drn  PM_Metal.drn  PM_Rubber.drn
Engine/Content/Shader/: ApplyDistortion.hlsl  ApplyLowerHemisphereColor.hlsl  BufferVisualizer.hlsl  ClearUAV.hlsl  ComposeSeparateTranslucency.hlsl  ConvolveSpecular.hlsl  CubemapDownsample.hlsl  DebugLineShader.hlsl  DebugLineThicknessShader.hlsl  DiffuseIrradiance.hlsl  GaussianBloom.hlsl  HZB.hlsl  LightGridCompact.hlsl  LightGridInjection.hlsl  LightPassDeferred.hlsl  MergeDistortion.hlsl  PositionOnlyDepthVertexShader.hlsl  ReflectionEnvironment.hlsl  ResizeSkycubemap.hlsl  ResolveAlphaBlended.hlsl  ResolveEditorSelection.hlsl  SceneDownSample.hlsl  ScreenSpaceAmbientOcclusion.hlsl  ScreenSpaceAmbientOcclusionSetup.hlsl  ScreenSpaceReflection.hlsl  SpecularConvolution.hlsl  Sprite.hlsl  TemporalAA.hlsl  Texture2DToTextureCube.hlsl  Tonemap.hlsl
Engine/Content/Shaders/: TestShader_PS.hlsl
Engine/Content/Test/: Test.blend  Test.blend1  Test.fbx  Test_MultiMaterial.blend  Test_MultiMaterial.blend1  Test_MultiMaterial.fbx
Engine/Content/Test/Gun/: Cerberus_LP.drn  Gun_Albedo.drn  Gun_Masks.drn  TestShader.drn
Engine/Content/Test/TestScene_1/: Level_01.drn  M_Floor_1.drn  M_Floor_1.hlsl  SM_Floor_1.drn  SM_Floor_1.fbx  T_EnvironmentMap.drn  TestScene_1.hip
Engine/Content/Textures/: SSAO_Jitter.drn  T_Black.drn  T_DefaultDecal_Al.drn  T_DefaultDecal_Al.tga  T_DefaultDecal_N.drn  T_DefaultDecal_N.tga  T_DefaultDecal_ORAO.drn  T_DefaultDecal_ORAO.tga  T_DefaultMask.drn  T_DefaultNormal.drn  T_Grey.drn  T_IntegeratedGF.drn  T_IntegeratedGF.tga  T_White.drn
Engine/Content/Textures/Debug/: T_DebugBrickWall.drn  T_DebugBrickWall.tga  T_DebugBrickWall_Masks.drn  T_DebugBrickWall_Masks.tga  T_DebugBrickWall_N.drn  T_DebugBrickWall_N.tga  T_DebugConeNormal.drn  T_DebugConeNormal.tga  T_DebugGrid_1_Al.drn  T_DebugGrid_1_Al.tga  T_DebugGrid_1_Masks.drn  T_DebugGrid_1_Masks.tga  T_DebugGrid_1_N.drn  T_DebugGrid_1_N.tga  T_DebugIndexedColor.drn
Engine/Source/: DrnPCH.cpp  DrnPCH.h  ForwardTypes.h
Engine/Source/Core/: Application.cpp  Application.h  Window.cpp  Window.h
Engine/Source/Editor/: Editor.cpp  Editor.h  EditorConfig.cpp  EditorConfig.h  EditorTypes.cpp  EditorTypes.h
Engine/Source/Editor/AssetImporter/: AssetImporterMaterial.cpp  AssetImporterMaterial.h  AssetImporterStaticMesh.cpp  AssetImporterStaticMesh.h  AssetImporterTexture.cpp  AssetImporterTexture.h
Engine/Source/Editor/AssetPreview/: AssetPreview.cpp  AssetPreview.h  AssetPreviewMaterialGuiLayer.cpp  AssetPreviewMaterialGuiLayer.h  AssetPreviewStaticMesh.cpp  (+11 more)
Engine/Source/Misc/: EnumClassFlags.h  Path.cpp  Path.h
Engine/Source/Renderer/: D3D12Adapter.cpp  D3D12Adapter.h  D3D12Descriptors.cpp  D3D12Descriptors.h  D3D12Device.cpp  D3D12Device.h  D3D12Queue.cpp  D3D12Queue.h  D3D12RHI.cpp  D3D12RHI.h  D3D12Texture.cpp  D3D12Texture.h  D3D12Utils.h  D3D12Viewport.cpp  D3D12Viewport.h  PixelFormat.cpp  PixelFormat.h  Renderer.cpp  Renderer.h
Game/: CMakeLists.txt  imgui.ini
Game/Content/: Level_01.drn  Level_02.drn  Level_03.drn  Level_04.drn  PhysicalMaterial_01.drn
Game/Content/Level_1/: Level_01.drn  M_SkySphere.drn  TestShader.drn
Game/Content/Level_2/: Level_02.drn
Game/Content/Level_3/: Level_03.drn
Game/Source/: GameApplication.cpp  GameApplication.h  GameForwardTypes.cpp  GameForwardTypes.h  GamePCH.h  main.cpp
Game/Source/Player/: TestPlayerCharacter.cpp  TestPlayerCharacter.h
Game/Source/Vehicle/: RaceVehicleMovementComponent.cpp  RaceVehicleMovementComponent.h  RaceVehiclePawn.cpp  RaceVehiclePawn.h
ImGui/: CMakeLists.txt  premake5.lua
(+949 files in other folders)
